# polarbearings

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  aoc.py  benchmark.py  conftest.py  justfile  main.py  prek.toml  pyproject.toml  release-please-config.json  test_versions.py
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: benchmark.yml  build.yml  ci.yml  fuzz.yml  lint.yml  release-please.yml  test.yml
benchmarks/: __init__.py  bench_average_precision.py  bench_brier_score.py  bench_classification.py  bench_gini.py  bench_grouped.py  bench_log_loss.py  bench_multi_metric.py  bench_regression.py  bench_roc_auc.py  compare.py  conftest.py  cooldown.py
docs/: FUTURE_IDEAS.md  audit-2026-06-21.md  audit-2026-07-05.md  polars-releases-2025-2026.md
docs/guides/: METRICS.md  TESTING.md
docs/technical/: PERFORMANCE.md  POLARS_COMPATIBILITY.md
notebooks/: diagnostics.ipynb
scripts/: compat_versions.py
src/polarbear/: __init__.py  average_precision.py  bootstrap.py  brier_score.py  classification.py  gini.py  log_loss.py  metrics.py  regression.py  roc_auc.py
src/polarbearings/: __init__.py  _common.py  average_precision.py  bootstrap.py  brier_score.py  calibration.py  class_weight.py  classification.py  confusion_curve.py  curves.py  gini.py  log_loss.py  ranking.py  regression.py  roc_auc.py  split.py  thresholds.py
tests/: conftest.py  test_additional_metrics.py  test_aoc.py  test_average_precision.py  test_bootstrap.py  test_brier_score.py  test_calibration.py  test_class_weight.py  test_classification.py  test_confusion_curve.py  test_confusion_matrix.py  test_curves.py  test_d2_scores.py  test_degenerate_inputs.py  test_edge_cases.py  test_gini.py  test_jaccard.py  test_log_loss.py  test_missing_values.py  test_ndcg.py  test_new_classification.py  test_new_regression.py  test_null_policy.py  test_pos_label.py  test_regression.py  test_roc_auc.py  test_split.py  test_thresholds.py  test_tweedie_deviance.py  test_weight_expression.py  test_weights.py
