[project]
name = "polarbear"
version = "0.1.0"
description = "High-performance machine learning metrics for Polars DataFrames"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jeremy Heffner", email = "3886031+jerheff@users.noreply.github.com" }]
keywords = [
    "polars",
    "metrics",
    "machine-learning",
    "data-science",
    "roc-auc",
    "classification",
    "regression",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jerheff/polarbear"
Repository = "https://github.com/jerheff/polarbear"
Issues = "https://github.com/jerheff/polarbear/issues"

[build-system]
requires = ["hatchling>=1.30,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polarbear"]

[tool.hatch.build.targets.sdist]
# Scope the source distribution explicitly so it can't vacuum up working-tree
# junk (.claude/, .github/, caches, dev configs). pyproject.toml + PKG-INFO are
# always included by the backend.
only-include = ["src", "tests", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    # Tooling — floors kept current so the `lowest-direct` dev resolution
    # (see [tool.uv]) still gives modern tools, not stale ones.
    "ty>=0.0.49",
    "ruff>=0.15.17",
    "pytest>=9.1",
    "pytest-cov>=7.1",
    "pytest-benchmark>=5.2",
    "pytest-timeout>=2.4",
    "hypothesis[numpy]>=6.155",
    "mutmut>=3.6",
    # Compatibility targets — floors kept LOW on purpose. We verify behavior
    # at their minimum supported version, so `lowest-direct` should pin these
    # to the floor.
    "numpy>=2.4",
    "scikit-learn>=1.8",
]

[tool.uv]
# Require a recent uv so the committed lock format and resolution behavior stay
# consistent across contributors and CI (the version contract for the tool).
required-version = ">=0.11"

# Resolve (and lock) direct dependencies to their LOWEST allowed versions, so
# development happens against our advertised floors — most importantly
# polars>=1.0.0. This surfaces accidental use of a newer polars API at dev/CI
# time rather than only in a user's older environment. Transitive dependencies
# still resolve to their highest compatible versions ("lowest-direct", not
# "lowest"). The upper bound is guarded separately by the highest-resolution CI
# job and `just test-highest`.
resolution = "lowest-direct"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations — require type hints on functions/params
    "D",    # pydocstyle — require & format docstrings
    "N",    # pep8-naming
    "RUF",  # ruff-specific rules
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "PIE",  # flake8-pie
    "TC",   # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PT",   # flake8-pytest-style
    "PERF", # perflint
    "FURB", # refurb — modernizing rewrites
    "T10",  # flake8-debugger — no stray breakpoint()/pdb
]
ignore = [
    "E501",    # line length — handled by the formatter
    "ANN401",  # allow explicit `Any` where the type is genuinely dynamic
    "RUF002",  # ambiguous unicode in docstrings (µ, ×, ², ₙ are intentional math)
    "RUF003",  # ambiguous unicode in comments (same)
    "RUF022",  # __all__ is grouped by metric category on purpose, not sorted
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests/benchmarks: don't require type annotations or docstrings on every test
# function and fixture (noisy, low value). Keep pytest-style + bugbear + naming.
"tests/**" = ["ANN", "D", "ARG"]
"benchmarks/**" = ["ANN", "D", "ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.11"

[tool.ty.terminal]
# Fail on warning-level diagnostics too, not just errors — keep the whole tree
# (src, tests, benchmarks) type-clean. ty checks the full project by default.
error-on-warning = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
python_functions = ["test_*"]
markers = ["hypothesis: property-based tests using Hypothesis (slow)"]
# Escalate deprecations to test failures so the highest-resolution job flags an
# API polars/sklearn is phasing out the moment it appears, not when it's removed.
filterwarnings = ["error::DeprecationWarning"]

[tool.coverage.run]
source = ["polarbear"]

[tool.coverage.report]
omit = ["tests/*", "benchmarks/*"]

[tool.mutmut]
paths_to_mutate = ["src/polarbear/"]
tests_dir = ["tests/"]
# mutmut runs this from the mutants/ dir. PYTHONPATH=src puts the mutated copy
# (mutants/src) ahead of the editable install so mutations are actually exercised;
# we invoke the project venv's python directly (../.venv from mutants/) to avoid
# uv re-resolving per mutant, which otherwise blows the timeout. Assumes the venv
# lives at .venv (uv default).
#
# POLARS_MAX_THREADS=1: each mutant run is its own process and mutmut already
# parallelizes across mutants, so a 10-thread polars pool per process just
# oversubscribes the box and stalls processes (the full suite here is <1s and
# the slowest single test is 0.01s — nothing is genuinely slow). Single-threaded
# polars removes that churn; mutmut does the parallelism.
test_command = "POLARS_MAX_THREADS=1 PYTHONPATH=src ../.venv/bin/python -m pytest tests/ -x -m 'not hypothesis' -q --tb=no --timeout=20 --timeout-method=thread"
# mutmut 3.x budget = (estimated_test_time + timeout_constant) * timeout_multiplier.
# Our bare-pytest test_command doesn't load mutmut's timing plugin, so
# estimated_test_time is ~0 and the budget is effectively a flat
# timeout_constant*timeout_multiplier floor. The suite is <1s, so ~20s is ~20x
# headroom: a timeout now means a process genuinely stalled, not a slow test.
timeout_multiplier = 10.0
timeout_constant = 2.0
