[project]
name = "polarbear"
version = "0.1.0"
description = "High-performance machine learning metrics for Polars DataFrames"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jeremy Heffner", email = "3886031+jerheff@users.noreply.github.com" }]
keywords = [
    "polars",
    "metrics",
    "machine-learning",
    "data-science",
    "roc-auc",
    "classification",
    "regression",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jerheff/polarbear"
Repository = "https://github.com/jerheff/polarbear"
Issues = "https://github.com/jerheff/polarbear/issues"

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # Floors kept current so the `lowest-direct` dev resolution
    # still gives modern tools, not stale ones.
    "ty>=0.0.51",
    "ruff>=0.15.18",
    "pytest>=9.1",
    "pytest-cov>=7.1",
    "pytest-benchmark>=5.2.3",
    "pytest-timeout>=2.4",
    "hypothesis[numpy]>=6.155.5",
    "mutmut>=3.6",
    "numpy>=2.4.6",
    "scikit-learn>=1.9",
]

[tool.uv]
required-version = ">=0.11"

# Resolve (and lock) direct dependencies to their LOWEST allowed versions, so
# development happens against our advertised floors — most importantly
# polars>=1.0.0. This surfaces accidental use of a newer polars API at dev/CI
# time rather than only in a user's older environment. Transitive dependencies
# still resolve to their highest compatible versions ("lowest-direct", not
# "lowest"). The upper bound is guarded separately by the highest-resolution CI
# job and `just test-highest`.
resolution = "lowest-direct"

# uv's native build backend (PEP 517). The src/ layout is auto-detected; we only
# extend the source distribution to also ship the test suite (matching the prior
# hatchling sdist), so downstream packagers can run the tests.
[tool.uv.build-backend]
source-include = ["tests/**"]

# Test PyPI, for dry-run publishing. `explicit = true` keeps it out of dependency
# resolution — it is only used when named, e.g. `uv publish --index testpypi`.
# Auth via UV_PUBLISH_TOKEN (a test.pypi.org token) or trusted publishing.
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations — require type hints on functions/params
    "D",    # pydocstyle — require & format docstrings
    "N",    # pep8-naming
    "RUF",  # ruff-specific rules
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "PIE",  # flake8-pie
    "TC",   # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PT",   # flake8-pytest-style
    "PERF", # perflint
    "FURB", # refurb — modernizing rewrites
    "T10",  # flake8-debugger — no stray breakpoint()/pdb
]
ignore = [
    "E501",    # line length — handled by the formatter
    "ANN401",  # allow explicit `Any` where the type is genuinely dynamic
    "RUF002",  # ambiguous unicode in docstrings (µ, ×, ², ₙ are intentional math)
    "RUF003",  # ambiguous unicode in comments (same)
    "RUF022",  # __all__ is grouped by metric category on purpose, not sorted
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests/benchmarks: don't require type annotations or docstrings on every test
# function and fixture (noisy, low value). Keep pytest-style + bugbear + naming.
"tests/**" = ["ANN", "D", "ARG"]
"benchmarks/**" = ["ANN", "D", "ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.11"

[tool.ty.terminal]
# Fail on warning-level diagnostics too, not just errors — keep the whole tree
# (src, tests, benchmarks) type-clean. ty checks the full project by default.
error-on-warning = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
python_functions = ["test_*"]
markers = ["hypothesis: property-based tests using Hypothesis (slow)"]
# Escalate deprecations to test failures so the highest-resolution job flags an
# API polars/sklearn is phasing out the moment it appears, not when it's removed.
filterwarnings = ["error::DeprecationWarning"]

[tool.coverage.run]
source = ["polarbear"]

[tool.coverage.report]
omit = ["tests/*", "benchmarks/*"]
# Single source of truth for the coverage gate: CI and `just test-cov` both fail
# below 100%. Version-gated branches carry `# pragma: no cover` (see bootstrap.py),
# so 100% is genuinely reachable on every Polars version in the matrix.
fail_under = 100

[tool.mutmut]
paths_to_mutate = ["src/polarbear/"]
tests_dir = ["tests/"]
# Skip the slow property-based tests during mutation runs.
pytest_add_cli_args = ["-m", "not hypothesis"]
#
# CAVEAT — mutmut full-runs are unreliable on this project. mutmut 3.x runs each
# mutant's tests with an in-process pytest inside a per-mutant os.fork() with no
# exec (it ignores `test_command`). Polars' rayon engine is fork-unsafe, so a
# forked child that runs any parallel op (sort, cum_sum, group_by, …) deadlocks
# and is killed as a spurious "timeout". Timeouts count as "caught", so they can
# mask a genuine survivor whose covering test happens to use such an op. There is
# no mutmut option to change this (the fork is hardcoded; --max-children only sets
# concurrency and a single forked child still deadlocks).
#
# SOURCE OF TRUTH for whether a mutant is killed: activate it via the trampoline
# and run pytest as a normal subprocess (no fork, no deadlock), e.g. from mutants/:
#   MUTANT_UNDER_TEST=polarbear.<module>.<mutant> \
#     PYTHONPATH=src ../.venv/bin/python -m pytest tests/ -m 'not hypothesis'
# Nonzero exit == killed. Use mutmut to ENUMERATE survivor candidates, then
# confirm each with this method. See docs/guides/TESTING.md.
