[project]
name = "polarbearings"
version = "0.2.2"
description = "High-performance machine learning metrics for Polars DataFrames"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jeremy Heffner", email = "3886031+jerheff@users.noreply.github.com" }]
keywords = [
    "polars",
    "metrics",
    "machine-learning",
    "data-science",
    "roc-auc",
    "classification",
    "regression",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jerheff/polarbearings"
Repository = "https://github.com/jerheff/polarbearings"
Issues = "https://github.com/jerheff/polarbearings/issues"

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # Floors kept current so the `lowest-direct` dev resolution still gives modern
    # tools, not stale ones. NB: numpy and scikit-learn are dev-only test/parity
    # deps, NOT package dependencies (the wheel depends only on polars) — there is
    # no support promise for them, so bump them forward like any other tool.
    "ty>=0.0.63",
    "ruff>=0.16.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1",
    "pytest-benchmark>=5.2.3",
    "pytest-timeout>=2.4",
    # Randomizes test order each run (and seeds stdlib/numpy RNGs) to surface
    # hidden inter-test state coupling. Reproduce a run with `-p randomly
    # --randomly-seed=<n>` (the seed is printed in the pytest header).
    "pytest-randomly>=4.1",
    "hypothesis[numpy]>=6.161.1",
    # Runs the README's Python code blocks as tests (via the root conftest), so a
    # renamed metric or changed signature in the docs fails CI. Shared setup frames
    # live in `<!--- invisible-code-block --->` HTML comments (invisible on GitHub).
    "sybil>=10",
    "mutmut>=3.6",
    # Capped in practice by our own requires-python: numpy 2.5 dropped Python
    # 3.11, and `lowest-direct` installs this floor into the 3.11 dev env. 2.4.6
    # is the last 3.11-compatible release — do not bump past it while we support
    # 3.11 (uv's resolver will reject it outright).
    "numpy>=2.4.6",
    "scikit-learn>=1.9",
]
# Tooling for the docs/diagnostics notebooks (plot-ready data + Plotly figures).
# Dev-only; never shipped with the published package.
notebooks = [
    "plotly>=6.8",
    "nbformat>=5.10.4",
    "nbconvert>=7.17.1",
    "ipykernel>=7.3",
]
# Per-test memory-limit enforcement for the dedicated "Memory limits" CI job (run
# with `pytest --memray`). Kept out of `dev` so the Py 3.11-3.14 test matrix doesn't
# install it (memray is Linux/macOS only). See tests/conftest.py.
memory = [
    "pytest-memray>=1.9.0",
]

[tool.uv]
required-version = ">=0.11"

# Resolve (and lock) direct dependencies to their LOWEST allowed versions, so
# development happens against our advertised floors — most importantly
# polars>=1.0.0. This surfaces accidental use of a newer polars API at dev/CI
# time rather than only in a user's older environment. Transitive dependencies
# still resolve to their highest compatible versions ("lowest-direct", not
# "lowest"). The upper bound is guarded separately by the highest-resolution CI
# job and `just test-highest`.
resolution = "lowest-direct"

# uv's native build backend (PEP 517). The src/ layout is auto-detected; we only
# extend the source distribution to also ship the test suite (matching the prior
# hatchling sdist), so downstream packagers can run the tests.
[tool.uv.build-backend]
source-include = ["tests/**"]

# Test PyPI, for dry-run publishing. `explicit = true` keeps it out of dependency
# resolution — it is only used when named, e.g. `uv publish --index testpypi`.
# Auth via UV_PUBLISH_TOKEN (a test.pypi.org token) or trusted publishing.
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 100
# Notebooks are narrative docs with embedded outputs, not shipped code; linting
# generated .ipynb JSON is high-noise/low-value (see also the ty src.exclude).
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations — require type hints on functions/params
    "D",    # pydocstyle — require & format docstrings
    "N",    # pep8-naming
    "RUF",  # ruff-specific rules
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "PIE",  # flake8-pie
    "TC",   # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PT",   # flake8-pytest-style
    "PERF", # perflint
    "FURB", # refurb — modernizing rewrites
    "T10",  # flake8-debugger — no stray breakpoint()/pdb
    "A",    # flake8-builtins — don't shadow builtins (min, max, id, type, ...)
    "EM",   # flake8-errmsg — assign exception messages to a var before raising
    "ISC",  # flake8-implicit-str-concat — catch accidental adjacent-string concat
    "FLY",  # flynt — prefer f-strings over str.join of a static sequence
    "PGH",  # pygrep-hooks — no blanket `# noqa` / `# type: ignore` (require a code)
    "RSE",  # flake8-raise — no needless parens on `raise Exc()` from `raise Exc`
    "TID",  # flake8-tidy-imports — import hygiene (no parent-relative imports)
    "PLE",  # pylint errors — real bugs (bad format strings, `return` in __init__)
    "PLW",  # pylint warnings — likely-wrong constructs (loop-var shadowing, ...)
]
ignore = [
    "E501",    # line length — handled by the formatter
    "ANN401",  # allow explicit `Any` where the type is genuinely dynamic
    "RUF002",  # ambiguous unicode in docstrings (µ, ×, ², ₙ are intentional math)
    "RUF003",  # ambiguous unicode in comments (same)
    "RUF022",  # __all__ is grouped by metric category on purpose, not sorted
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests/benchmarks: don't require type annotations or docstrings on every test
# function and fixture (noisy, low value). Keep pytest-style + bugbear + naming.
"tests/**" = ["ANN", "D", "ARG"]
"benchmarks/**" = ["ANN", "D", "ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
# ruff >= 0.16 also formats Python code blocks inside Markdown (README, docs/).
# We keep that on: the README's blocks are executed as tests (Sybil, see
# conftest.py), so they are real code and should match the formatter that shapes
# the rest of the package. Use `<!-- fmt: off -->` / `<!-- fmt: on -->` around a
# block whose hand-wrapping is deliberate.

[tool.ty.src]
# Notebooks are narrative docs, not part of the typed package (mirrors the ruff
# extend-exclude).
exclude = ["notebooks"]

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "bench_*.py"]
python_functions = ["test_*"]
# --strict-markers: an unregistered/typo'd marker is an error, not a silent no-op.
# --strict-config: an unknown key or parse error in this section fails loudly.
addopts = ["--strict-markers", "--strict-config"]
# A test marked xfail that unexpectedly PASSES becomes a failure, so a stale
# "known failure" can't silently mask a since-fixed (then re-broken) test.
xfail_strict = true
# Assert the pytest plugins the suite relies on are installed, so a broken env
# fails loudly instead of silently dropping coverage, random ordering, timeouts,
# etc. memray is intentionally excluded (memory-only group, Linux/macOS); sybil
# hooks in via the root conftest, not as a pytest plugin. The doctest run uses
# `--randomly-dont-reorganize` (not `-p no:randomly`) so pytest-randomly stays
# loaded and this check still holds there.
required_plugins = [
    "hypothesis",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-randomly",
    "pytest-timeout",
]
markers = [
    "hypothesis: property-based tests using Hypothesis (slow)",
    "limit_memory: pytest-memray per-test peak-memory ceiling (enforced under --memray)",
    "limit_leaks: pytest-memray per-test leak ceiling (enforced under --memray)",
]
# Escalate EVERY warning to a test failure — most importantly the numpy/polars
# RuntimeWarnings (divide-by-zero, overflow, invalid value) that silently yield
# NaN/inf, the exact bug class this library exists to get right. Deprecations are
# included, so the highest-resolution job still flags a phasing-out polars/sklearn
# API on sight. Add a narrow `"ignore::..."` entry only if a benign third-party
# warning ever appears.
filterwarnings = ["error"]

[tool.coverage.run]
source = ["polarbearings"]
# Branch coverage (not just line): a version-gated `if` that only ever takes one
# arc on a given Polars version is flagged as a partial branch, so the 100% gate
# can only be met by exercising both arcs — which `just test-cov` / the CI coverage
# job do by combining a floor run with a 1.36+ run (see those for the rationale).
branch = true

[tool.coverage.report]
omit = ["tests/*", "benchmarks/*"]
# Single source of truth for the coverage gate: CI and `just test-cov` both fail
# below 100%. Reaching 100% requires combining a floor (polars 1.0.0) run with a
# 1.36+ run so the version-gated fast paths (e.g. ECE/MCE over-in-agg >=1.36)
# execute on both sides — no `# pragma: no cover` needed.
fail_under = 100

[tool.mutmut]
paths_to_mutate = ["src/polarbearings/"]
tests_dir = ["tests/"]
# Skip the slow property-based tests during mutation runs.
pytest_add_cli_args = ["-m", "not hypothesis"]
#
# CAVEAT — mutmut full-runs are unreliable on this project. mutmut 3.x runs each
# mutant's tests with an in-process pytest inside a per-mutant os.fork() with no
# exec (it ignores `test_command`). Polars' rayon engine is fork-unsafe, so a
# forked child that runs any parallel op (sort, cum_sum, group_by, …) deadlocks
# and is killed as a spurious "timeout". Timeouts count as "caught", so they can
# mask a genuine survivor whose covering test happens to use such an op. There is
# no mutmut option to change this (the fork is hardcoded; --max-children only sets
# concurrency and a single forked child still deadlocks).
#
# SOURCE OF TRUTH for whether a mutant is killed: activate it via the trampoline
# and run pytest as a normal subprocess (no fork, no deadlock), e.g. from mutants/:
#   MUTANT_UNDER_TEST=polarbearings.<module>.<mutant> \
#     PYTHONPATH=src ../.venv/bin/python -m pytest tests/ -m 'not hypothesis'
# Nonzero exit == killed. Use mutmut to ENUMERATE survivor candidates, then
# confirm each with this method. See docs/guides/TESTING.md.
